# capabilities-psp-policy

./: Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  hub.yml  metadata.yml
.github/workflows/: release.yml  tests.yml
src/: lib.rs  mutate.rs  settings.rs  validate.rs
test_data/: panic.json  req_pod_with_allowed_capabilities_accept.json  req_pod_with_allowed_capabilities_reject.json  req_pod_with_capabilities_in_required_drop_capabilities.json  req_pod_with_container_with_capabilities_added.json  req_pod_with_container_with_capabilities_added_and_sidecar.json  req_pod_with_container_with_capabilities_added_for_deployment.json  req_pod_with_mutate_capabilities.json  req_pod_with_mutate_capabilities_for_deployment.json  req_pod_without_security_context.json
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
