[package]
name = "capabilities-psp"
version = "0.1.15"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonpath_lib = "0.3.0"
kubewarden-policy-sdk = "0.10.1"
k8s-openapi = { version = "0.22.0", features = ["v1_29"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
test_helpers = { path = "test_helpers" }
